# OBS_live_indicator

./: CMakeLists.txt  README.md
.github/workflows/: windows.yml
ci/: windows.yml
src/: live_indicator.cpp
